--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,7 +36,9 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
   dartx: ^1.2.0
-  knob_widget: ^1.0.3
+  flutter_bloc: ^8.1.6
+  firebase_core: ^3.8.0
+  cloud_firestore: ^5.5.0
   
 
 dev_dependencies:
